Atualizando menu e criando um slider

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BRTROPICAL FLORES</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="assets/Css/reset.css">
-    <link rel="stylesheet" href="assets/Css/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/Css/w3.css/w3.css">
+    <link rel="stylesheet" type="text/css" href="assets/Css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/Css/styles.css">
+    <link rel="shortcut icon" href="assets/Media/img/Flores/flor3.jpg" type="image/x-icon">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 
 </head>
 
@@ -22,14 +26,61 @@
                     <li><a href="#galeria">Galeria</a></li>
                     <li><a href="#produtos">Produtos</a></li>
                     <li><a href="#contato">Contato</a></li>
-                    <button class="button-login"><a href="assets/html/login.html" target="_blank">Login</a></button>
+                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                    <li><a href="assets/html/login.html" target="_blank"><i class="fa-solid fa-user"></i></a></li>
                 </ul>
 
             </nav>
         </div>
     </header>
 
-    <section id="sobre" class="section">
+    <section id="home" class="section bg-green">
+
+        <div class="main-content">
+            <h1>BRTROPICAL FLORES</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore delectus sequi numquam dolores quisquam,
+                odio maiores earum molestias iste velit iure incidunt officiis in, eius aspernatur nam rerum libero!
+                Magnam.</p>
+
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" name="radio-btn" id="radio1">
+                    <input type="radio" name="radio-btn" id="radio2">
+                    <input type="radio" name="radio-btn" id="radio3">
+                    <input type="radio" name="radio-btn" id="radio4">
+
+                    <div class="slide first">
+                        <img src="assets/Media/img/Flores/flor2.jpg" alt="Imagem de uma for" />
+                    </div>
+                    <div class="slide">
+                        <img src="assets/Media/img/Flores/flor7.jpg" alt="Imagem de uma for" />
+                    </div>
+                    <div class="slide">
+                        <img src="assets/Media/img/Flores/flor3.jpg" alt="Imagem de uma for" />
+                    </div>
+                    <div class="slide">
+                        <img src="assets/Media/img/Flores/flor6.jpg" alt="Imagem de uma for" />
+                    </div>
+
+                    <div class="navigation-auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
+                        <div class="auto-btn4"></div>
+                    </div>
+                </div>
+
+                <div class="manual-navigation">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="sobre" class="section ">
         <div class="main-content intro-content">
             <div class="intro-text">
                 <h2>Sobre Nós</h2>
@@ -46,33 +97,40 @@
                     vibrantes para relacioná-las a alegria das flores tropicais como produto.</p>
             </div>
             <div class="intro-img">
-                <img src="assets/Media/img/flor1.jpg" alt="Flor tropical branca">
+                <img src="assets/Media/img/Flores/flor1.jpg" alt="Flor tropical branca">
             </div>
         </div>
     </section>
 
-    <section id="galeria" class="section">
+    <section id="galeria" class="section bg-green">
         <div class="main-content">
             <h2>Galeria</h2>
-            <p>Uma flor diferente para tornar cada momento da sua vida especial, espécies exóticas em arranjos diferenciados e exclusivos, conheça um pouco mais sobre a cooperativa e o trabalho que desenvolvemos.</p>
+            <p>Uma flor diferente para tornar cada momento da sua vida especial, espécies exóticas em arranjos
+                diferenciados e exclusivos, conheça um pouco mais sobre a cooperativa e o trabalho que desenvolvemos.
+            </p>
             <div class="w3-row">
                 <div class="w3-col s4 w3-center gallery-img container-img">
-                    <img src="assets/Media/img/flor2.jpg" class="w3-round w3-padding" alt="Imagem da primeira flor">
+                    <img src="assets/Media/img/Flores/flor2.jpg" class="w3-round w3-padding"
+                        alt="Imagem da primeira flor">
                 </div>
                 <div class="w3-col s4 w3-center gallery-img container-img">
-                    <img src="assets/Media/img/flor3.jpg" class="w3-round w3-padding " alt="Imagem da segunda flor">
+                    <img src="assets/Media/img/Flores/flor3.jpg" class="w3-round w3-padding "
+                        alt="Imagem da segunda flor">
                 </div>
                 <div class="w3-col s4 w3-center gallery-img container-img">
-                    <img src="assets/Media/img/flor4.jpg" class="w3-round w3-padding" alt="Imagem da terceira flor">
+                    <img src="assets/Media/img/Flores/flor4.jpg" class="w3-round w3-padding"
+                        alt="Imagem da terceira flor">
                 </div>
                 <div class="w3-col s4 w3-center gallery-img container-img">
-                    <img src="assets/Media/img/flor5.jpg" class="w3-round w3-padding" alt="Imagem da quarta flor">
+                    <img src="assets/Media/img/Flores/flor5.jpg" class="w3-round w3-padding"
+                        alt="Imagem da quarta flor">
                 </div>
                 <div class="w3-col s4 w3-center gallery-img container-img">
-                    <img src="assets/Media/img/flor6.jpg" class="w3-round w3-padding " alt="Imagem da quinta flor">
+                    <img src="assets/Media/img/Flores/flor6.jpg" class="w3-round w3-padding "
+                        alt="Imagem da quinta flor">
                 </div>
                 <div class="w3-col s4 w3-center gallery-img container-img">
-                    <img src="assets/Media/img/flor7.jpg" class="w3-round w3-padding" alt="Imagem da sexta flor">
+                    <img src="assets/Media/img/Flores/flor7.jpg" class="w3-round w3-padding" alt="Imagem da sexta flor">
                 </div>
             </div>
 
@@ -82,7 +140,9 @@
     <section id="produtos" class="section">
         <div class="main-content">
             <h2>Produtos</h2>
-            <p>Flores são sempre mensageiras de boas energias, o que fazemos é transformar essas jóias da natureza em arranjos cheios de sofisticação e com uma assinatura única, moderna, recheada de referências nas artes e no design.</p>
+            <p>Flores são sempre mensageiras de boas energias, o que fazemos é transformar essas jóias da natureza em
+                arranjos cheios de sofisticação e com uma assinatura única, moderna, recheada de referências nas artes e
+                no design.</p>
             <div class="w3-row">
                 <div class="w3-col s4 w3-center gallery-img">
                     <div class="w3-card-4">
@@ -149,14 +209,14 @@
         </div>
     </section>
 
-    <section id="contato" class="background-contact section">
+    <section id="contato" class=" section bg-green">
         <div class="main-content intro-content">
             <div class="intro-text">
                 <h2>Contato</h2>
                 <p style="font-size: 3rem;">Informações ou sugestões, preencha o formulário a seguir.</p>
             </div>
             <div class="intro-img">
-                <img src="assets/Media/img/contact-us.svg" alt="imagem demonstrando várias formas de contato">
+                <img src="assets/Media/img/icones/contact-us.svg" alt="imagem demonstrando várias formas de contato">
             </div>
             <div class="contact-form">
                 <fieldset class="form-grid">
@@ -188,17 +248,19 @@
 
                 </fieldset>
 
-                <footer id="footer" class="footer white-bg ">
-                    <p>Desenvolvido por <a rel="nofollow" target="_blank" href="#">MGLC - Soluções Técnologicas</a>
-                    </p>
-                </footer>
-            
-        
             </div>
         </div>
         </div>
     </section>
 
+    <footer id="footer" class="footer">
+        <p>Desenvolvido por <a rel="nofollow" target="_blank" href="#">MGLC - Soluções Técnologicas</a>
+        </p>
+    </footer>
+
+
+
+    <script src="assets/Js/carrousel.js"></script>
 </body>
 
 </html>
