--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,24 +10,27 @@
     <link rel="stylesheet" href="../Css/styles.css">
     <link rel="stylesheet" href="../Css/login.css">
 </head>
+
 <body>
     <form>
         <div class="left-col">
             <h2>Bem-vindo de volta</h2>
-            <label for="email">Email:</label> 
+            <label for="email">Email:</label>
             <input type="text" id="email" name="email" placeholder="Digite seu E-mail" required><br>
             <label for="password">Senha:</label>
-            <input type="password" id="password" name="password"  placeholder="Digite sua Senha" required><br><br>
+            <input type="password" id="password" name="password" placeholder="Digite sua Senha" required><br><br>
             <input type="checkbox" id="remember" name="remember">
             <label for="remember">Lembrar Senha</label> <br>
             <a href="#">Esqueceu sua senha?</a><br><br><br>
             <input type="submit" value="Login">
             <br><br>
-            
+
             <a href="#">Não possui conta? Clique aqui.</a>
         </div>
-        <div class="right-col"><img src="../Media/img/Plano-de-fundo-login.jpg" alt="Plano de fundo do login"></div>
-        </form>
-        
+        <div class="right-col"><img src="../Media/img/Plano de fundo/Plano-de-fundo-login.jpg"
+                alt="Plano de fundo do login"></div>
+    </form>
+
 </body>
+
 </html>
