--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
     </header>
 
-    <section id="home" class="section bg-green">
+    <section id="" class="section bg-green">
 
         <div class="main-content">
-            <h1>BRTROPICAL FLORES</h1>
+            <h2>BRTROPICAL FLORES</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore delectus sequi numquam dolores quisquam,
                 odio maiores earum molestias iste velit iure incidunt officiis in, eius aspernatur nam rerum libero!
                 Magnam.</p>
