--- a/index.html
+++ b/index.html
@@ -253,10 +253,44 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Empresa</h4>
+                    <ul>
+                        <li><a href="#">Sobre nós</a></li>
+                        <li><a href="#">Outros serviços</a></li>
+                        <li><a href="#">Politicas de privacidade</a></li>
+                        <li><a href="#">Programas de afiliação</a></li>
+                    </ul>
+                </div>
 
-    <footer id="footer" class="footer">
-        <p>Desenvolvido por <a rel="nofollow" target="_blank" href="#">MGLC - Soluções Técnologicas</a>
-        </p>
+                <div class="footer-col">
+                    <h4>Obter ajuda</h4>
+                    <ul>
+                        <li><a href="">Perguntas frequentes</a></li>
+                        <li><a href="">Status do pedido</a></li>
+                        <li><a href="">Opções de pagamento</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h4>Fale conosco</h4>
+                    <a href="#"><img src="assets/Media/img/Mascote/Mascote2.png" alt=""></a>
+                </div>
+
+                <div class="footer-col">
+                    <h4>Redes sociais</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 
 
