Deixando seção sobre nós responsiva

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
         <div class="main-content">
             <h2>BRTROPICAL FLORES</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore delectus sequi numquam dolores quisquam,
-                odio maiores earum molestias iste velit iure incidunt officiis in, eius aspernatur nam rerum libero!
-                Magnam.</p>
+            <p>Bem-vindo à nossa incrível seção de flores tropicais! Explore a exuberância e a beleza da natureza com
+                nosso deslumbrante slider de flores tropicais. Deixe-se envolver pelas cores vibrantes, formas exóticas
+                e fragrâncias irresistíveis que essas flores únicas têm a oferecer.</p>
 
             <div class="slider">
                 <div class="slides">
