--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="../Css/reset.css">
-    <link rel="stylesheet" href="../Css/styles.css">
-    <link rel="stylesheet" href="../Css/login.css">
+  <meta charset="UTF-8">
+  <title>Login / Sign Up Form UI</title>
+  <link rel="stylesheet" href="./style.css">
+
 </head>
-
 <body>
-    <form>
-        <div class="left-col">
-            <h2>Bem-vindo de volta</h2>
-            <label for="email">Email:</label>
-            <input type="text" id="email" name="email" placeholder="Digite seu E-mail" required><br>
-            <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" placeholder="Digite sua Senha" required><br><br>
-            <input type="checkbox" id="remember" name="remember">
-            <label for="remember">Lembrar Senha</label> <br>
-            <a href="#">Esqueceu sua senha?</a><br><br><br>
-            <input type="submit" value="Login">
-            <br><br>
 
-            <a href="#">Não possui conta? Clique aqui.</a>
-        </div>
-        <div class="right-col"><img src="../Media/img/Plano de fundo/Plano-de-fundo-login.jpg"
-                alt="Plano de fundo do login"></div>
+<div class="container">
+  <div class="message signup">
+    <div class="btn-wrapper">
+        <button class="button" id="login"> Login</button>
+      <button class="button" id="signup">Criar conta</button>
+    </div>
+  </div>
+  <div class="form form--login">
+    <div class="form--heading">Bem vindo de volta! </div>
+    <form autocomplete="off">
+      <input type="text" placeholder="Nome">
+      <input type="password" placeholder="Senha">
+      <button class="button">Login</button>
     </form>
-
+  </div><br>
+  <div class="form form--signup">
+    <div class="form--heading">Olá! Crie sua conta:</div>
+    <form autocomplete="off">
+      <input type="text" placeholder="Nome">
+      <input type="email" placeholder="Email">
+      <input type="password" placeholder="Senha">
+      <button class="button">Criar conta</button>
+    </form>
+  </div>
+  <div>
+    <div class="text"> Login com:</div>
+    <i class="fa-brands fa-apple"></i>
+    <i class="fa-brands fa-instagram"></i>
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-google"></i>
+  </div>
+</div>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  <script src="./script.js"></script>
+  <script src="https://kit.fontawesome.com/fe73793743.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
