--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -2,8 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Login / Sign Up Form UI</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Login / Inscrever-se Form UI</title>
+  <link rel="stylesheet" type="text/css" href="Css/login.css">
 
 </head>
 <body>
