--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Login / Inscrever-se Form UI</title>
-  <link rel="stylesheet" type="text/css" href="Css/login.css">
+  <link rel="stylesheet" type="text/css" href="../Css/login.css">
+  <link rel="stylesheet" href="../Css/styles.css">
 
 </head>
 <body>
@@ -40,10 +41,15 @@
     <i class="fa-brands fa-google"></i>
   </div>
 </div>
+
+
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script src="./script.js"></script>
   <script src="https://kit.fontawesome.com/fe73793743.js" crossorigin="anonymous"></script>
+  <script src="../Js/login.js"></script>
+
+  
 </body>
 </html>
