--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -1,55 +1,64 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Login / Inscrever-se Form UI</title>
-  <link rel="stylesheet" type="text/css" href="../Css/login.css">
+  <title>Login/Cadastro</title>
+  <!-- CSS -->
+  <link rel="stylesheet" href="../Css/reset.css">
   <link rel="stylesheet" href="../Css/styles.css">
+  <link rel="stylesheet" href="../Css/responsividade.css">
+  <link rel="stylesheet" href="../Css/login.css">
+  <!-- Font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
+
 <body>
 
-<div class="container">
-  <div class="message signup">
-    <div class="btn-wrapper">
+  <div class="container">
+    <div class="message signup">
+      <div class="btn-wrapper">
+        <button class="button" id="signup">Criar conta</button>
         <button class="button" id="login"> Login</button>
-      <button class="button" id="signup">Criar conta</button>
+      </div>
+    </div>
+    <div class="form form--signup">
+      <div class="form--heading">Bem vindo! Cadastre-se</div>
+      <form autocomplete="off">
+        <input type="text" required placeholder="Nome">
+        <input type="email" required placeholder="Email">
+        <input type="password" required placeholder="Senha">
+        <input type="password" required placeholder="Confirmar Senha">
+        <button class="button">Criar conta</button>
+
+        <p>Cadastre-se usando as seguintes redes:</p>
+        <div class="social-links">
+          <a href="#"><i class="fa-brands fa-google"></i></a>
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        </div>
+      </form>
+    </div>
+    <div class="form form--login">
+      <div class="form--heading">Bem vindo de volta!</div>
+      <form autocomplete="off">
+        <input type="email" required placeholder="E-mail">
+        <input type="password" required placeholder="Password">
+        <button class="button">Login</button>
+        <p>Conecte-se usando as seguintes redes:</p>
+        <div class="social-links">
+          <a href="#"><i class="fa-brands fa-google"></i></a>
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        </div>
+      </form>
     </div>
   </div>
-  <div class="form form--login">
-    <div class="form--heading">Bem vindo de volta! </div>
-    <form autocomplete="off">
-      <input type="text" placeholder="Nome">
-      <input type="password" placeholder="Senha">
-      <button class="button">Login</button>
-    </form>
-  </div><br>
-  <div class="form form--signup">
-    <div class="form--heading">Olá! Crie sua conta:</div>
-    <form autocomplete="off">
-      <input type="text" placeholder="Nome">
-      <input type="email" placeholder="Email">
-      <input type="password" placeholder="Senha">
-      <button class="button">Criar conta</button>
-    </form>
-  </div>
-  <div>
-    <div class="text"> Login com:</div>
-    <i class="fa-brands fa-apple"></i>
-    <i class="fa-brands fa-instagram"></i>
-    <i class="fa-brands fa-facebook"></i>
-    <i class="fa-brands fa-google"></i>
-  </div>
-</div>
 
-
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-  <script src="./script.js"></script>
-  <script src="https://kit.fontawesome.com/fe73793743.js" crossorigin="anonymous"></script>
   <script src="../Js/login.js"></script>
 
-  
 </body>
+
 </html>
