Deixando galeria responsiva

--- a/index.html
+++ b/index.html
@@ -107,39 +107,42 @@
     </section>
 
     <section id="galeria" class="section bg-green">
-        <div class="main-content">
-            <h2>Galeria</h2>
-            <p>Uma flor diferente para tornar cada momento da sua vida especial, espécies exóticas em arranjos
+        <div class="main-content grid-content">
+            <h2 class="grid-main-heading">Galeria</h2>
+            <p class="grid-description">Uma flor diferente para tornar cada momento da sua vida especial, espécies
+                exóticas em arranjos
                 diferenciados e exclusivos, conheça um pouco mais sobre a cooperativa e o trabalho que desenvolvemos.
             </p>
-            <div class="w3-row">
-                <div class="w3-col s4 w3-center gallery-img container-img">
+            <div class="grid">
+                <div class="gallery-img">
                     <img src="assets/Media/img/Flores/flor2.jpg" class="w3-round w3-padding"
                         alt="Imagem da primeira flor">
                 </div>
-                <div class="w3-col s4 w3-center gallery-img container-img">
+                <div class="gallery-img">
                     <img src="assets/Media/img/Flores/flor3.jpg" class="w3-round w3-padding "
                         alt="Imagem da segunda flor">
                 </div>
-                <div class="w3-col s4 w3-center gallery-img container-img">
+                <div class="gallery-img">
                     <img src="assets/Media/img/Flores/flor4.jpg" class="w3-round w3-padding"
                         alt="Imagem da terceira flor">
                 </div>
-                <div class="w3-col s4 w3-center gallery-img container-img">
+                <div class="gallery-img">
                     <img src="assets/Media/img/Flores/flor5.jpg" class="w3-round w3-padding"
                         alt="Imagem da quarta flor">
                 </div>
-                <div class="w3-col s4 w3-center gallery-img container-img">
+                <div class="gallery-img">
                     <img src="assets/Media/img/Flores/flor6.jpg" class="w3-round w3-padding "
                         alt="Imagem da quinta flor">
                 </div>
-                <div class="w3-col s4 w3-center gallery-img container-img">
+                <div class="gallery-img">
                     <img src="assets/Media/img/Flores/flor7.jpg" class="w3-round w3-padding" alt="Imagem da sexta flor">
                 </div>
             </div>
 
         </div>
     </section>
+
+
 
     <section id="produtos" class="section">
         <div class="main-content">
@@ -217,11 +220,12 @@
         <div class="main-content intro-content">
             <div class="intro-text">
                 <h2>Contato</h2>
-                <p style="font-size: 3rem;">Informações ou sugestões, preencha o formulário a seguir.</p>
+                <p>Informações ou sugestões, preencha o formulário a seguir.</p>
             </div>
             <div class="intro-img">
                 <img src="assets/Media/img/icones/contact-us.svg" alt="imagem demonstrando várias formas de contato">
             </div>
+
             <div class="contact-form">
                 <fieldset class="form-grid">
                     <legend>Entre em Contato </legend>
