Alterando seção de produtos

--- a/index.html
+++ b/index.html
@@ -151,68 +151,70 @@
                 arranjos cheios de sofisticação e com uma assinatura única, moderna, recheada de referências nas artes e
                 no design.</p>
             <div class="w3-row">
-                <div class="w3-col s4 w3-center gallery-img">
+                <div class="w3-col s4 w3-center">
                     <div class="w3-card-4">
-                        <img src="assets/Media/img/produtos/Flor-Ave-do-paraiso.jpg"
-                            alt="imagem da flor ave do paraiso">
+                        <img src="assets/Media/img/produtos/Flor-Ave-do-paraiso.jpg" alt="imagem da flor ave do paraiso"
+                            style="height: 240px; width: 100%; cursor: pointer;">
                         <div class="w3-container w3-center">
-                            <p style="margin-bottom: 5px;">Ave do paraiso</p>
+                            <p>Ave do paraiso</p>
                             <p>R$ 15.99</p>
                         </div>
                     </div>
                 </div>
-                <div class="w3-col s4 w3-center gallery-img">
+                <div class="w3-col s4 w3-center">
                     <div class="w3-card-4">
                         <img src="assets/Media/img/produtos/gengibre ornamentais.jpg"
-                            alt="imagem da flor ave do paraiso" style="height: 240px;">
+                            alt="imagem da flor ave do paraiso" style="height: 240px; width: 100%; cursor: pointer;">
                         <div class="w3-container w3-center">
-                            <p style="margin-bottom: 5px;">Gengibre ornamentais</p>
+                            <p>Gengibre ornamentais</p>
                             <p>R$ 14.99</p>
                         </div>
                     </div>
                 </div>
-                <div class="w3-col s4 w3-center gallery-img">
+                <div class="w3-col s4 w3-center">
                     <div class="w3-card-4">
                         <img src="assets/Media/img/produtos/cana indica.jpg" alt="imagem da flor ave do paraiso"
-                            style="height: 240px;">
+                            style="height: 240px; width: 100%; cursor: pointer;">
                         <div class="w3-container w3-center">
-                            <p style="margin-bottom: 5px;">Cana indica</p>
+                            <p>Cana indica</p>
                             <p>R$ 21.99</p>
                         </div>
                     </div>
                 </div>
-                <div class="w3-col s4 w3-center gallery-img">
+                <div class="w3-col s4 w3-center">
                     <div class="w3-card-4">
                         <img src="assets/Media/img/produtos/Costus ornmanetais.webp" alt="imagem da flor ave do paraiso"
-                            style="height: 240px;">
+                            style="height: 240px; width: 100%; cursor: pointer;">
                         <div class="w3-container w3-center">
-                            <p style="margin-bottom: 5px;">Costus Ornamentais</p>
+                            <p>Costus Ornamentais</p>
                             <p>R$ 19.99</p>
                         </div>
                     </div>
                 </div>
-                <div class="w3-col s4 w3-center gallery-img">
+                <div class="w3-col s4 w3-center">
                     <div class="w3-card-4">
                         <img src="assets/Media/img/produtos/michael-pfister-M5oHfkxQeY4-unsplash.jpg"
-                            alt="imagem da flor ave do paraiso" style="height: 240px;">
+                            alt="imagem da flor ave do paraiso" style="height: 240px; width: 100%; cursor: pointer;">
                         <div class="w3-container w3-center">
-                            <p style="margin-bottom: 5px;">Ave do paraiso</p>
+                            <p>Ave do paraiso</p>
                             <p>R$ 22.99</p>
                         </div>
                     </div>
                 </div>
-                <div class="w3-col s4 w3-center gallery-img">
+                <div class="w3-col s4 w3-center">
                     <div class="w3-card-4">
                         <img src="assets/Media/img/produtos/zoltan-tasi-yanhwFwyoaU-unsplash.jpg"
-                            alt="imagem da flor ave do paraiso" style="height: 240px;">
+                            alt="imagem da flor ave do paraiso" style="height: 240px; width: 100%; cursor: pointer;">
                         <div class="w3-container w3-center">
-                            <p style="margin-bottom: 5px;">Cana indica</p>
+                            <p>Cana indica</p>
                             <p>R$ 25.99</p>
                         </div>
                     </div>
                 </div>
                 <button class="button-products" type="button"><a href="#">Visualizar mais produtos</a></button>
             </div>
+
+
         </div>
     </section>
 
