--- a/index.html
+++ b/index.html
@@ -150,71 +150,30 @@
             <p>Flores são sempre mensageiras de boas energias, o que fazemos é transformar essas jóias da natureza em
                 arranjos cheios de sofisticação e com uma assinatura única, moderna, recheada de referências nas artes e
                 no design.</p>
+            
             <div class="w3-row">
-                <div class="w3-col s4 w3-center">
-                    <div class="w3-card-4">
-                        <img src="assets/Media/img/produtos/Flor-Ave-do-paraiso.jpg" alt="imagem da flor ave do paraiso"
-                            style="height: 240px; width: 100%; cursor: pointer;">
-                        <div class="w3-container w3-center">
-                            <p>Ave do paraiso</p>
-                            <p>R$ 15.99</p>
-                        </div>
-                    </div>
+                <div class="w3-col s4 w3-white w3-center">
+                    <img src="assets/Media/img/produtos/Flor-Ave-do-paraiso.jpg" alt="imagem da flor ave do paraiso"
+                        style="height: 250px; width: 100%;">
+                    <p>Ave do paraiso</p>
+                    <p>R$ 39.99</p>
                 </div>
-                <div class="w3-col s4 w3-center">
-                    <div class="w3-card-4">
-                        <img src="assets/Media/img/produtos/gengibre ornamentais.jpg"
-                            alt="imagem da flor ave do paraiso" style="height: 240px; width: 100%; cursor: pointer;">
-                        <div class="w3-container w3-center">
-                            <p>Gengibre ornamentais</p>
-                            <p>R$ 14.99</p>
-                        </div>
-                    </div>
+                <div class="w3-col s4 w3-white w3-center">
+                    <img src="assets/Media/img/produtos/gengibre ornamentais.jpg" alt="imagem da flor ave do paraiso"
+                        style="height: 250px; width: 100%; margin-left: 5px;">
+                    <p>Gengibre ornamentais</p>
+                    <p>R$ 29.99</p>
                 </div>
-                <div class="w3-col s4 w3-center">
-                    <div class="w3-card-4">
-                        <img src="assets/Media/img/produtos/cana indica.jpg" alt="imagem da flor ave do paraiso"
-                            style="height: 240px; width: 100%; cursor: pointer;">
-                        <div class="w3-container w3-center">
-                            <p>Cana indica</p>
-                            <p>R$ 21.99</p>
-                        </div>
-                    </div>
+                <div class="w3-col s4 w3-white w3-center">
+                    <img src="assets/Media/img/produtos/cana indica.jpg" alt="imagem da flor ave do paraiso"
+                        style="height: 250px; width: 100%; margin-left: 5px;">
+                    <p>Cana indica</p>
+                    <p>R$ 19.99</p>
                 </div>
-                <div class="w3-col s4 w3-center">
-                    <div class="w3-card-4">
-                        <img src="assets/Media/img/produtos/Costus ornmanetais.webp" alt="imagem da flor ave do paraiso"
-                            style="height: 240px; width: 100%; cursor: pointer;">
-                        <div class="w3-container w3-center">
-                            <p>Costus Ornamentais</p>
-                            <p>R$ 19.99</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w3-col s4 w3-center">
-                    <div class="w3-card-4">
-                        <img src="assets/Media/img/produtos/michael-pfister-M5oHfkxQeY4-unsplash.jpg"
-                            alt="imagem da flor ave do paraiso" style="height: 240px; width: 100%; cursor: pointer;">
-                        <div class="w3-container w3-center">
-                            <p>Ave do paraiso</p>
-                            <p>R$ 22.99</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w3-col s4 w3-center">
-                    <div class="w3-card-4">
-                        <img src="assets/Media/img/produtos/zoltan-tasi-yanhwFwyoaU-unsplash.jpg"
-                            alt="imagem da flor ave do paraiso" style="height: 240px; width: 100%; cursor: pointer;">
-                        <div class="w3-container w3-center">
-                            <p>Cana indica</p>
-                            <p>R$ 25.99</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="button-products" type="button"><a href="#">Visualizar mais produtos</a></button>
+
             </div>
-
-
+        </div>
+        <button class="button-products" type="button"><a href="#">Visualizar mais produtos</a></button>
         </div>
     </section>
 
