--- a/carrinho.html
+++ b/carrinho.html
@@ -133,7 +133,7 @@
     </script>
 </head>
 <body>
-    <h1>Carrinho de Compras - BRTROPICAL FLORES</h1>
+    <h1>BRTROPICAL FLORES</h1>
     <table>
         <thead>
             <tr>
