link do carrinho de compras

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#galeria">Galeria</a></li>
                     <li><a href="#produtos">Produtos</a></li>
                     <li><a href="#contato">Contato</a></li>
-                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                    <li><a href="carrinho.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                     <li><a href="assets/html/login.html" target="_blank"><i class="fa-solid fa-user"></i></a></li>
                 </ul>
 
