ajustes dos botões de aumentar,diminuir e Dark

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="assets/html/login.html" target="_blank"><i class="fa-solid fa-user"></i></a></li>
                     <button id="aumentar"><i class="material-icons">A+</i></button>
                     <button id="diminuir"><i class="material-icons">A-</i></button>
-                    <button id="dark-mode-btn">Escuro</button>
+                    <button id="dark-mode-btn">ESCURO</button>
                 </ul>
 
             </nav>
@@ -291,9 +291,9 @@
          btn.addEventListener('click', function () {
          body.classList.toggle('dark-mode');
          if (body.classList.contains('dark-mode')) {
-         btn.textContent = 'claro';
+         btn.textContent = 'CLARO';
          } else {
-         btn.textContent = 'escuro';
+         btn.textContent = 'ESCURO';
          }
        });
       </script>
